# ChangeLog for app-laptop/tlp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jun 2017; Andre Erdmann <dywi@mailerd.de> -tlp-0.6-r1.ebuild,
  -tlp-0.7.ebuild, -tlp-0.7-r1.ebuild, -tlp-0.7-r3.ebuild, -tlp-0.8.ebuild:
  Remove old ebuilds.

  18 Jan 2017; André Erdmann <dywi@mailerd.de> tlp-9999-r1.ebuild:
  Drop "laptop-mode-tools" USE flag.
  While running both app-laptop/laptop-mode-tools and app-laptop/tlp
  at the same time is unsupported, laptop-mode-tools is not the only
  prog/solution that interferes with TLP (think custom udev rules,
  for example).

  17 Jan 2017; André Erdmann <dywi@mailerd.de> tlp-0.6-r1.ebuild,
  tlp-0.7.ebuild, tlp-0.7-r1.ebuild, tlp-0.7-r3.ebuild,
  tlp-0.8.ebuild, tlp-0.9.ebuild, tlp-9999-r1.ebuild:
  tlp-gentoo-patches files have been moved from to aws s3,
  modified SRC_URI to reflect this change.

* tlp-0.9 (20 Aug 2016)
  20 Aug 2016; Andre Erdmann <dywi@mailerd.de> +tlp-0.9.ebuild:
  Latest upstream relase.

  20 Aug 2016; Andre Erdmann <dywi@mailerd.de> tlp-9999-r1.ebuild,
  metadata.xml:
  Update live ebuild: combined live/release-ver ebuild,
  use optfeature for suggesting optional deps.

* tlp-9999-r1 (09 Mar 2016)
  09 Mar 2016; Andre Erdmann <dywi@mailerd.de> +tlp-9999-r1.ebuild:
  Reintroduce the live ebuild; note that EPREFIX is not supported.

  02 Sep 2015; Andre Erdmann <dywi@mailerd.de> -tlp-9999.ebuild:
  Remove outdated live ebuild.
  Recent upstream changes require an ebuild overhaul (9999-r1).
  Also, tlp-0.8 builds a more recent version than -9999
  (0.8: 0.8 + fix; 9999: devel==0.8, master is 0.8.900).

* tlp-0.8 (08 Aug 2015)
  08 Aug 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.8.ebuild:
  Latest upstream release.
  Note that the USB_DRIVER_BLACKLIST feature had to be removed because of
  systemd-udevd changes, use USB_BLACKLIST instead.
  Switched to the "openrc-run" run script (same as already used for -9999).