@@ -3,8 +3,11 @@ AUX tlp-init.openrc 499 SHA256 432428177e4ef4de32120e4b465313bab25e7722d9afcfb36
 AUX tlp-init.openrc-r1 574 SHA256 b4ae03be2e7b88f9595358b30811051c5373c71cbd771ac60fb8671ab8ca1372 SHA512 17008b09bee746d6121e614c14ce1898485d04fef9561f51c2cb60295a3fa09f9b8666dc9b8023f55fb4d9705ca15427599d21f16d8b3c6458d4fc1a207829fe WHIRLPOOL 6a05eb525fecfd75d9b52a5efcae8aa9015c9dbabc767938286e4a75c3b6e07d93dedda006e56f68de94aa1869fcc1c515e92ff8a5b6531ef5e4f6a9991ff28e
 AUX tlp-init.openrc-r2 575 SHA256 dd2a5bade0e904d685a6a8d0313cda6455820dd3bf634b424dac6ebb7c8334ff SHA512 0ba6d3c163cf8743350534a0b61ad2909cf30d527797a923c4d673c5f0fe5d89f48b345d1f42a2b0a278400b09be7bf6e82688dbbd4e9fa71df896fe649bb75a WHIRLPOOL c5905d1b37f8b1733294ae27abe806b3e1d2596019f06474ef351cf8b3ba3b20f471ed5ba66e529e5d24e14a2a517613ebeb2d915f8680d6fb609d4549e71ee9
 DIST tlp-0.9.tar.gz 67780 SHA256 887b226d443f930398fda5793ac690e1e1ef7dd2187db7be0278359315aa7a76 SHA512 126d11739f2438eb9cf8c496fc7d8cecfb05b578c2ae99264ee53d9fb85dfeab59456483867f21c621d0db6793468f7b0bd77868e999801115e157e1ba383610 WHIRLPOOL 7cf3cdd860b14ae4783c35de90923200bbd0c40a1c32670e439eebee74476512f61d5b5f7aadf3e777d367ab14af91b4f207eed17516f8c5b5a575e88f6660d9
+DIST tlp-1.0.tar.gz 73067 SHA256 642717b27db3a70c2cdef2673fe3229bf314488aa0797515e63d933b93bc78ec SHA512 ae3a14cf4b89c3ab2376ac7feaa60d5125850b3afccf8aa7414376eed47294886981f38578901e87489741da2c0904906a0fea7c50119662aad68aa6a8c7d4b3 WHIRLPOOL cf7098001952d714245c2d910ead2d9f28a1c77fb2e2b15a1f861966ac4777b7476d77bf1399aa1f0e516f1263d42bc5c3153442279f3d2dfec0c161e92df24a
 DIST tlp-gentoo-patches-0.9.tar.xz 1392 SHA256 6180a6aa5c3e8a5e78e11f481fdd6bd5db22fba12b019b5e2697480be919e567 SHA512 2bbfa7dae4e709e5772c9cd8ed7bf7bc44233b0aa0c5b69982bb228406e20b95075468474435fad526c6a63466d1191f8d626ce12b256e31f600ccf0aba7e0f8 WHIRLPOOL fbc72106f1dc55568ee06cac39ce00e8d5e47d1115a7b7acb0e8298e44710c4fc750c24bae0c0e7252144498d10966419d9530b1e31bbec456b2b9140c0cbd0d
+DIST tlp-gentoo-patches-1.0.tar.xz 1388 SHA256 82b30c9dc59d62e98346953b136e1559c0f546d6532733b9684a5bf053e29c03 SHA512 48209895c1a450d7cdb518c42f2f1e3af0b1e9bde8644c8ecdda72481503f6535519db7cba9c3263c5d303c264a2936a4c17278cd52d9d7d17410b383a151ba8 WHIRLPOOL b6bada0c22d0809d093c63e30a2d9e0b5aa603dca64eae676051aa30617a8d42b5912da60c083eb11ce4f8f8169a717e89f2822398113f6e8da20173c07f7389
 EBUILD tlp-0.9.ebuild 5083 SHA256 256d52aa7e3ddaf76bdb3c009daded2a067aeb994d0db83114de2225fcf060e2 SHA512 e195da9e62e229e5f53c4b5076312b9d47294b38b09aae5c0662d6b356c345f53e45eda09bfc5c08caa7ccf76ec48841ed0462ae4fe41486e7d5a9963e266d30 WHIRLPOOL 2dac02321fefe034c3339c57b74ec7a9855d41ba29182e416cec4cee34af9381a53d2763f5f800abd02b6d658c2fe4d46ad0a12af76e05b27d3db2cd685c4590
+EBUILD tlp-1.0.ebuild 4903 SHA256 291250032bc7a8d36250ced9e4404ba8e908186e69218083ea9ffa38483ecbae SHA512 e30ac68da1462505282584f8dbe788901358e414590ae43f25e4968bbcb51c99ab278375cc33d03995b8130d370e741787b9345ea5ceb10e3af2c915b0b01efb WHIRLPOOL c7cc7cae9145e5a6bce980bb89771b432dbddcfce086ab63cfa6cc759c4a401839b3878e78462763dee2f5b9fa2fda057c4d881e6ef7a521ef618ff3224126b2
 EBUILD tlp-9999-r1.ebuild 4903 SHA256 291250032bc7a8d36250ced9e4404ba8e908186e69218083ea9ffa38483ecbae SHA512 e30ac68da1462505282584f8dbe788901358e414590ae43f25e4968bbcb51c99ab278375cc33d03995b8130d370e741787b9345ea5ceb10e3af2c915b0b01efb WHIRLPOOL c7cc7cae9145e5a6bce980bb89771b432dbddcfce086ab63cfa6cc759c4a401839b3878e78462763dee2f5b9fa2fda057c4d881e6ef7a521ef618ff3224126b2
-MISC ChangeLog 14447 SHA256 905e28745f927090622cc8ab561f3d34ebc799869e4fc84d849975a2d1d62070 SHA512 a6db5d8f3eeb39694407dcaba72ae021d259eef2e0b74e708ed782ffb8807b239c3eca6dafad2569e1c378d26166c7f2efddc3d77b023f1078f55a0f03f2b063 WHIRLPOOL 8106e1e352f06631d5d10745448b508a0d8466034350bc1a17a19a47416a9380446dad3a6fdeba0433a2fb9e5e570112124ecd6872814369262b9c5adb3d1972
+MISC ChangeLog 14562 SHA256 3bb1a76a1bc38009686874697c979a2a3b9917b8ec7539bd8c10a6f22cb30bf9 SHA512 86b428b2df807228dff2b1a4980c2a974ddd696e611825b291e4fb4769247a30ae9691edbc5aa1657e1072b4700482e4ce1e12fec649f1cdb3b208cbeb2ce308 WHIRLPOOL 94d5a544bb8461fb21b170c7680d0ae8cde9f089acbcf3d119ceec5fac5700158aa2613a2b5c7470e9c1e8ecd4cdcccd9c44733478539f581e2b37aeaad94605
 MISC metadata.xml 1903 SHA256 33bcb57bb2ee549e11ecad0f5d2a928ea1e82d08f5d9903855f907fd64d0aedc SHA512 741f1f38c2bb92491c4dacd7d4e916a8500b45b141d0399a1942fca074df30e6b23d82a34814f7feae2c0a5c4f0b7e23d5fb4de6f18f05527b1f3ab207946b66 WHIRLPOOL ebb33b133ecbf618e63692544276fe100916aeefe0c95c05a92bc10607809ddde3138f4fa2593917dea39ce92e2b96148211a264755df21805ef18fdef63ccf5
